EDP RePublish - Added Hackathon results (#207)
* EDP RePublish - Added Hackathon results

* Jorge Review

* Update 2016-09-26-en-EDP.md

* Update 2016-09-26-en-EDP.md

Update review in progress.

* Update 2016-09-26-en-EDP.md

* Update 2016-09-26-en-EDP.md

Preparing for republication.

* Update 2016-09-26-pt-EDP.md

Preparing for republication.

* Update 2016-09-26-en-EDP.md

* Update 2016-09-26-pt-EDP.md

--- a/_posts/2016-09-26-pt-EDP.md
+++ b/_posts/2016-09-26-pt-EDP.md
@@ -1,6 +1,5 @@
 ---
 layout: post
-published:  false
 title:  "EDP | Home Smartmeters"
 author: "João Almeida"
 author-link: "http://github.com/joalmeid"
@@ -9,25 +8,36 @@ date:   2017-01-05
 categories: IoT
 color: "blue"
 #image: "{{ site.baseurl }}/images/edp/edp02.png" #should be ~350px tall
-excerpt: Nos últimos anos, a EDP desenvolveu a solução Re:dy. Trata-se de um produto de gama alta, na classe de Domótica, que pode ser associado a uma assinatura de cliente. Re:dy é um produto poderoso, mas não é fácil de instalar e acaba por ser um serviço oneroso para o cliente final. A EDP procura soluções mais acessíveis baseado num produto mais fácil de instalar na casa de clientes. Idealmente esta nova versão do produto deve ser instalada pelo próprio cliente sem a necessidade de deslocação um técnico.
+excerpt: A EDP, um dos principais produtores de energia em Portugal, quer desafiar os startups a criar uma solução de baixo custo para utilizadores finais que permita aos clientes recolher dados sobre consumo de energia doméstica e explorar formas de utilizar a informação. A EDP decidiu que a melhor abordagem para tal desafio seria através de um hackathon público, e sua equipe trabalhou com a Microsoft para se preparar para o evento.
 language: Portuguese
 verticals: [Energy, Smart Cities]
 ---
-    
+
+Vivemos na era da inovação no setor de energia. A energia renovável tem vindo a crescer significativamente na última década e a EDP, o líder na produção e distribuição de energia em Portugal, tem sido um líder desta revolução da energia limpa. A integração das tecnologias de informação e comunicação com a rede de distribuição secular, resultando num complexa infrastrutura usualmente denominada como *smart grid*, tem sido a chave para permitir a crescente penetração de energia renovável e maximizar o potencial de eficiência energética.
+
+## O desafio ##
+
+A EDP **decidiu desafiar as *startups*** a encontrarem uma solução pouco onerosa para monitorização energética residencial destinada ao cliente final, fácil de instalar e utilizar. Esta solução deve permitir um cliente final recolher dados sobre o consumo energético e explorar formas de utilizar a informação recolhida. Visa-se explorar novos modelos de negócio que podem incluir abordagens open source até produtos comercializáveis, explorando a integração com a indústria de domótica.
+
+A melhor abordagem para um desafio desta natureza seria através de um hackathon.
+
+## Perfil do cliente ##
 
 ![Logotipo EDP]({{ site.baseurl }}/images/edp/edp02.png "Logotipo EDP")
 
-A EDP é uma empresa de serviços integrados verticalmente, é a maior geradora, distribuidora e fornecedora de electricidade em Portugal e tem operações significativas em electricidade e gás em Espanha. A EDP é a terceira maior empresa de produção de electricidade e uma das maiores distribuidoras de gás da Península Ibérica.
+
+[EDP – Energias de Portugal, S.A.](http://www.edp.pt/en/Pages/homepage.aspx) é uma empresa de serviços integrados verticalmente, é a maior geradora, distribuidora e fornecedora de electricidade em Portugal e tem operações significativas em electricidade e gás em Espanha. A EDP é a terceira maior empresa de produção de electricidade e uma das maiores distribuidoras de gás da Península Ibérica.
 
 A EDP tem presença relevante no panorama energético mundial, estando presente em 14 países, com mais de 10 milhões de clientes de eletricidade e 1,4 milhão de pontos de fornecimento de gás e mais de 12 mil funcionários em todo o mundo. A 31 de dezembro de 2015, a EDP tinha uma capacidade instalada de 24,4GW, gerando 63,7TWh, sendo 72% provenientes de usinas eólicas e hídricas.
- 
+
 Em 2015, seguindo o desempenho nas dimensões económica, social e ambiental, a EDP integrou índices de sustentabilidade (DJSI World e Europa).
 
-Vivemos na era da inovação no setor de energia. A energia renovável tem vindo a crescer significativamente na última década e a EDP tem sido um líder desta revolução da energia limpa. A integração das tecnologias de informação e comunicação com a rede de distribuição secular tem sido a chave para permitir a crescente penetração de energia renovável e maximizar o potencial de eficiência energética. A geração solar nos agregados familiares, combinada crescentemente com o armazenamento estático, e a gerência integrada das cargas de dispositivos elétricos é o futuro do retalho energético. Os carros elétricos estão em crescimento exponencial e serão a referência na mobilidade, moldando a relação entre clientes de energia e recursos. Um novo mundo energético emerge, onde o conforto do serviço, a mobilidade, a sustentabilidade e a economia serão impulsionados por uma abordagem *multitech* apoiada em IoT emergente, *machine learning* e tecnologias *Big Data*. A EDP é forte crente na inovação aberta. A EDP trabalha com universidades, instituições científicas, startups, fornecedores da cadeias de valor e muitas outras fontes de inovação. A EDP colabora com empresários, grandes *business angels* corporativos, fundos de capital de risco e outros investidores. Eles disponibilizam um conjunto de ferramentas que incluem financiamento, suporte de gestão e uma base de teste orientada a negócios com presença internacional. A EDP está empenhada em estar na vanguarda da inovação energética.
+Vivemos na era da inovação no setor de energia. A energia renovável tem vindo a crescer significativamente na última década e a EDP tem sido um líder desta revolução da energia limpa. A integração das tecnologias de informação e comunicação com a rede de distribuição secular tem sido a chave para permitir a crescente penetração de energia renovável e maximizar o potencial de eficiência energética. A geração solar nos agregados familiares, combinada crescentemente com o armazenamento estático, e a gerência integrada das cargas de dispositivos elétricos é o futuro do retalho energético. Os carros elétricos estão em crescimento exponencial e serão a referência na mobilidade, moldando a relação entre clientes de energia e recursos. Um novo mundo energético emerge, onde o conforto do serviço, a mobilidade, a sustentabilidade e a economia serão impulsionados por uma abordagem *multitech* apoiada em IoT emergente, *machine learning* e tecnologias *Big Data*. A EDP é forte crente na inovação aberta. A EDP trabalha com universidades, instituições científicas, startups, fornecedores da cadeias de valor e muitas outras fontes de inovação. A EDP colabora com empresários, grandes business angels corporativos, fundos de capital de risco e outros investidores. Eles disponibilizam um conjunto de ferramentas que incluem financiamento, suporte de gestão e uma base de teste orientada a negócios com presença internacional. A EDP está empenhada em estar na vanguarda da inovação energética.
 
 ### EDP Starter ###
 
 <img src="{{ site.baseurl }}/images/edp/edp33.png" width="500">
+
 
 EDP Starter é o ecossistema de empreendedorismo da EDP. Corresponde ao programa para apoiar projetos na indústria de energia, do estágio da idéia ao investimento de capital de risco.
 
@@ -37,15 +47,12 @@ Um conceito de incubação inovador para startups no setor de energia. Muito mai
 
 ![Logotipo Narrow Net]({{ site.baseurl }}/images/edp/edp31.png "Logotipo Narrow Net")
 
-Portugal foi sempre um País pioneiro nos Descobrimentos, geográficos e tecnológicos. É bem sabido que "demos novos mundos ao Mundo" e, nos exemplos tecnológicos, podemos realçar, como exemplo, o pioneirismo, e rápida adoção pelos Portugueses, nos casos da Via Verde©, massificação das caixas Multibanco© ou penetração de telemóveis.
 
-Todas estas descobertas e adoções foram orientadas no sentido de melhorar a qualidade de vida das pessoas.
+Portugal foi sempre um País pioneiro nos [Descobrimentos](https://en.wikipedia.org/wiki/Portuguese_discoveries), geográficos e tecnológicos. É bem sabido que "demos novos mundos ao Mundo" e, nos exemplos tecnológicos, podemos realçar, como exemplo, o pioneirismo, e rápida adoção pelos Portugueses, nos casos da [Via Verde](https://en.wikipedia.org/wiki/Via_Verde)©, massificação das caixas Multibanco© ou penetração de telemóveis. Todas estas descobertas e adoções foram orientadas no sentido de melhorar a qualidade de vida das pessoas.
 
-A NarrowNet, seguindo esta filosofia, definiu a sua Missão como empresa, ou seja, que mais uma vez, Portugal lidere um dos desafios mais atraentes do Sec. XXI: permitir que os objetos falem entre si, para melhorar a qualidade de vida das pessoas, com custos insignificantes.
+A [Narrow Net](http://www.narrownet.pt/), seguindo esta filosofia, definiu a sua Missão como empresa, ou seja, que mais uma vez, Portugal lidere um dos desafios mais atraentes do Sec. XXI: permitir que os objetos falem entre si, para melhorar a qualidade de vida das pessoas, com custos insignificantes.
 
-Para isso põe à disposição de todos a tecnologia de comunicação Ultra Narrow Band (UNB), exclusivamente desenhada para a Internet das Coisas, e com grandes possibilidades de poder vir a converter-se num standard da comunicação entre os objetos no futuro.
-
-Mas, acima de tudo, esta tecnologia, com custos insignificantes, permite o acesso a toda a população de serviços até agora inacessíveis a todos, convertendo-o num grande benefício social.
+Para isso põe à disposição de todos a tecnologia de comunicação Ultra Narrow Band (UNB), exclusivamente desenhada para a Internet das Coisas, e com grandes possibilidades de poder vir a converter-se num standard da comunicação entre os objetos no futuro. Mas, acima de tudo, esta tecnologia, com custos insignificantes, permite o acesso a toda a população de serviços até agora inacessíveis a todos, convertendo-o num grande benefício social.
 
 A Narrow Net S.A., é uma empresa portuguesa que detém os direitos exclusivos da aplicação desta tecnologia (patenteada pela SIGFOX) para Portugal, com o intuito de desenvolver uma rede de comunicação especifica no nosso país, e simultaneamente desenvolver o ecossistema.
 
@@ -61,33 +68,21 @@ Portugal está a crescer a partir da crise financeira dos finais de 2000 e emerg
 
 Os sistemas de medição inteligente medem o consumo de eletricidade e são implementados para substituir os métodos manuais de coleta de informações sobre o uso de energia. Ao permitir acompanhar o consumo, os medidores inteligentes são uma ferramenta útil para entender onde o uso de energia pode ser cortado e onde é necessário implementar medidas de optimização de consumo. Da mesma forma, pode-se comunicar com os sistemas de automação residencial para ajudar a controlar o uso de energia, particularmente nos momentos em que os custos estão no auge.
 
-## O desafio ##
-
-A EDP iniciou à bastantes anos, a integração de tecnologias de informação e comunicação com a rede de distribuição. Actualmente fornece aos seus clientes residenciais medidores inteligentes, munidos de tecnologia que pode ser explorado de formas inovadoras.
-
-A EDP **decidiu desafiar as startups** a encontrarem uma solução pouco onerosa para o cliente final, fácil de instalar e utilizar. Esta solução deve permitir um cliente final recolher dados sobre o consumo energético e explorar formas de utilizar a informação recolhida. Visa-se explorar novos modelos de negócio que podem incluir abordagens *open source* até produtos comercializáveis. A integração coma indústria de domótica é também incluída.
-
-A melhor abordagem para um desafio desta natureza seria através de um hackathon.
-
-### Hackathon Público ###
+## Solução ##
 
 A preparação de um hackthon público, desta natureza, requer no entanto, um trabalho que envolve competencias técnicas de hardware e software. A EDP cedo optou por dimensionar o hackathon para um máximo de 20 equipas de 3 elementos. As candidaturas dos participantes será avaliado pela Microsoft e EDP.
 
-Esse foi o desafio, cuja solução detalha-se em baixo.
-
-## Solução ##
-
 Cedo entendeu-se que o desafio principal seria o desenvolvimento de hardware que permitisse a equipas com menos skills em Hardware competir de forma justa. Desejava-se que equipas fortes no desenvolvimento de software tivessem a oportunidade de aplicar os seus conhecimentos, sem ter obrigatoriamente de desenvolver o hardware. Do mesmo modo, não era desejável que equipas com experiencia em hardware - os makers - não fossem recompensados apropriadamente.
 
-Deliverables
+Entregas
 
-1.	Algoritmo de compressão SIGFOX – Comprime mensagem de 16b para um volume menor que 12b.
-2.	SIGFOX Callback, IoT Hub, Azure Stream Analytics, Power BI, Logic Apps, Notification Hub Setup – Para processar mensagens SIGFOX, processar, visualizar e notificar.
-3.	EDP IoT Box - Shield de Arduino customizado, Caixa customizada impressa em 3D
-4.	edpComm Library – Biblioteca C++ para a comunicação da EDP IoT Box
-5.	Azure Ramp Up Material – Documentação, tutoriais e exemplos de código;
-6.	Arduino Ramp Up Material – Documentação, tutoriais e exemplos de código;
-7.	EDP Hackathon Website - Pode visitar o site em [*http://edpiothackathon.edp.pt*](http://edpiothackathon.edp.pt). 
+- Algoritmo de compressão SIGFOX – Comprime mensagem de 16b para um volume menor que 12b.
+- SIGFOX Callback, IoT Hub, Azure Stream Analytics, Power BI, Logic Apps, Notification Hub Setup – Para processar mensagens SIGFOX, processar, visualizar e notificar.
+- EDP IoT Box – Shield de Arduino customizado, Caixa customizada impressa em 3D
+- edpComm Library – Biblioteca C++ para a comunicação da EDP IoT Box
+- Azure Ramp Up Material – Documentação, tutoriais e exemplos de código;
+- Arduino Ramp Up Material – Documentação, tutoriais e exemplos de código;
+- EDP Hackathon Website – Pode visitar o site em [*http://edpiothackathon.edp.pt*](http://edpiothackathon.edp.pt). 
 
 ![EDP IoT Hackathon Logo]({{ site.baseurl }}/images/edp/edp32.png "EDP IoT Hackathon Logo")
 
@@ -100,6 +95,7 @@ Autores:
 - Francisco Maria Santos – Software Developer, EDP  
 - Diogo Ribeiro – Electrical Engineer, EDP
 - João Sabido – Entrepreneurship & Business Incubation, EDP Starter
+- António Baptista – Entrepreneurship & Business Incubation, EDP Starter
 
 ![Quadro de trabalho da equipa e Francisco Santos]({{ site.baseurl }}/images/edp/edp18.jpg)
 
@@ -108,11 +104,11 @@ Autores:
 
 Um dos grandes objectivos ficou definido como a criação adequada de documentação para o Hackathon publico. Foi classificada a possível audiencia do Hackathon e como resultado foram identificadas três *personas* distintas: **Iniciante**, **Intermédio** e **Avançado**. O objectivo seria criar documentação apropriada a a cada *persona*.
 
-- Iniciante: Haverão equipas com menos experiencia nas componentes de Hardware e/ou software. Poderão ser startups dedicadas ao desenvolvimento de hardware e que terão mais facilidade em deduzir como extrair dados do leitor inteligente da EDP (EDP Box); De igual forma, os candidatos poderão ter fortes skills apenas no desenvolvimento de software, nomeadamente nas áreas de visualização de dados ou mesmo Cloud. 
+- **Iniciante:** Haverão equipas com menos experiencia nas componentes de Hardware e/ou software. Poderão ser startups dedicadas ao desenvolvimento de hardware e que terão mais facilidade em deduzir como extrair dados do leitor inteligente da EDP (EDP Box); De igual forma, os candidatos poderão ter fortes skills apenas no desenvolvimento de software, nomeadamente nas áreas de visualização de dados ou mesmo Cloud. 
 
-- Intermédio: As equipas candidatas também terão elementos com conhecimento intermédios nas áreas de Hardware e/ou Software. O objetivo será de providenciar documentação adequada aos conhecimentos para que sejam o mais produtivos possívels. A aprendizagem é um objectivo claro e devem ser criadas as condições ideais para tal acontecer. Desta forma os resultados serão mais valiosos. Para este tipo de candidatos, pretende-se que facilmente apliquem os seus conhecimentos, evoluam e sejam bem sucedidos a criar valor acrescentado.
+- **Intermédio:** As equipas candidatas também terão elementos com conhecimento intermédios nas áreas de Hardware e/ou Software. O objetivo será de providenciar documentação adequada aos conhecimentos para que sejam o mais produtivos possívels. A aprendizagem é um objectivo claro e devem ser criadas as condições ideais para tal acontecer. Desta forma os resultados serão mais valiosos. Para este tipo de candidatos, pretende-se que facilmente apliquem os seus conhecimentos, evoluam e sejam bem sucedidos a criar valor acrescentado.
 
-- Avançado: É objetivo da EDP ter aplicações de startups com experiencia comprovada nas áreas de Hardware e/ou Software. Para que o hackathon lhes seja uma experiencia valiosa, será necessário ter desafios e documentação adequada. Estes candidatos quererão por em pratica os seus conhecimentos e investigar abordagens inovadoras enquadrado no desafio colocado. Deseja-se que estes candidatos tenham a orientação certa para surpreender os jurados.
+- **Avançado:** É objetivo da EDP ter aplicações de startups com experiencia comprovada nas áreas de Hardware e/ou Software. Para que o hackathon lhes seja uma experiencia valiosa, será necessário ter desafios e documentação adequada. Estes candidatos quererão por em pratica os seus conhecimentos e investigar abordagens inovadoras enquadrado no desafio colocado. Deseja-se que estes candidatos tenham a orientação certa para surpreender os jurados.
 
 Foi decidido disponibilizar documentação apropriada a cada uma das personas, segmentando a documentação por Software e Hardware. 
 
@@ -168,7 +164,7 @@ A EDP IoT Box sofreu várias interações até ao formato final. Foram utilizado
 
 #### A placa Akeru ####
 
-A placa AKeru manipula-se como um Arduino, podendo inclusivé utilizar as ferramentas de desenvolvimento de [*Arduino*](https://www.arduino.cc).
+A placa AKeru manipula-se como um Arduino Uno, podendo inclusivé utilizar as ferramentas de desenvolvimento de [*Arduino*](https://www.arduino.cc).
 
 O desenvolvimento no Akeru é igualmente feito na linguagem de Arduino, que é um sub conjunto de C/C++, com algumas funções especificas para o hardware. São gerados *sketchs* e passado directamente para um compilador de C/C++ (avr-g++). 
 
@@ -187,9 +183,9 @@ O principal desafio, foi o algoritmo de compressão de dados para envio via SIGF
 
 **Notes:**
 
-1.	Assumindo uma implementação até ao ano 2099. Permite apenas ano com dois caracteres.(1Byte);
-2.	*Offset* deve ser considerado como a contagem de intervalos de 15 minutos desde as 00h00.
-3.	Um total de 96 intervalos por dia.
+- Assumindo uma implementação até ao ano 2099. Permite apenas ano com dois caracteres.(1Byte);
+- *Offset* deve ser considerado como a contagem de intervalos de 15 minutos desde as 00h00.
+- Um total de 96 intervalos por dia.
 
 Com este algoritmo foi possível baixar a dimensão das mensagens a um valor inferior a 12 Bytes - o limite em SIGFOX.
 
@@ -236,7 +232,7 @@ int EDPComm::getLoadProfileData(uint16_t dataArray[16]){
 }
 ```
 
-### Arquitectura da plataforma cloud ###
+### Arquitectura da plataforma *cloud* ###
 
 Para permitir o envio das leituras da EDP Box para uma plataforma cloud, como o [*Microsoft Azure*](https://azure.microsoft.com/), seria necessário definir um arquitectura para o backend cloud. Os principais objetivos identificados foram:
 
@@ -248,7 +244,7 @@ Para permitir o envio das leituras da EDP Box para uma plataforma cloud, como o 
 ![Cloud Arquitecture]({{ site.baseurl }}/images/edp/edp05.jpg)
 
 
-Para tal foi seguida uma implementação de acordo com a [*Azure IoT Reference Architecture*](http://download.microsoft.com/download/A/4/D/A4DAD253-BC21-41D3-B9D9-87D2AE6F0719/Microsoft_Azure_IoT_Reference_Architecture.pdf). A ingestão de dados, foi o principal ponto na qual foi identificado o [*Azure IoT Hub*](https://azure.microsoft.com/en-us/services/iot-hub/), como peça fundamental. No entanto iniciámos pelo protocolo de comunicação: 
+Para tal foi seguida uma implementação de acordo com a [*Azure IoT Reference Architecture*](http://download.microsoft.com/download/A/4/D/A4DAD253-BC21-41D3-B9D9-87D2AE6F0719/Microsoft_Azure_IoT_Reference_Architecture.pdf). A ingestão de dados, foi o principal ponto na qual foi identificado o [*Azure IoT Hub*](https://azure.microsoft.com/en-us/services/iot-hub/), como peça fundamental. No entanto iniciámos pelo protocolo de comunicação. 
 
 #### SIGFOX ####
 
@@ -260,13 +256,13 @@ O principal factor que levou à opção de SIGFOX, está relacionado com o baixo
 
 | SIGFOX Radio Technology ||
 |----------------------------|-----------------|
-| Purpose | Specially conceived for M2M/IoT.|
-| Identity | Each device has a unique ID (NOT an IP); |
-| Ultra Narrow Band | - Energy-efficient; - Resistant to jamming; |
-| Spectrum | ISM free-to-use (ETSI 300-220); Forces 1% duty cycle; Base stations MUST comply as well;
-| Frequency | 828 MHz (Europe); 902 MHz (USA); |
-| Long Range & Protocols | 2-way communication with 162 dB path loss; |
-| Customer Payload | 12 byte messages with a MAXIMUM of 140 message per day in Europe (ETSI 300-220).|
+| Propósito | Especialmente concebida para M2M/IoT. |
+| Identidade | Cada dispositivo tem um identificador únivoco (não um IP); |
+| *Ultra Narrow Band* | - Energeticamente eficiente; - Resistente a jamming; |
+| Espectro | - Livre utilização ISM (ETSI 300-220); - Estações base necessitam ser certificadas. |
+| Frequência | 828 MHz (Europa); 902 MHz (EUA); |
+| Curta Distância e Protocolos | Comunicação bidirectional com perdas em 162 dB; |
+| Conteúdo | Mensagens de 12 bytes com um máximo de 140 messagens por dia na Europa (ETSI 300-220). |
 
 Neste projeto seria necessário fazer chegar as mensagens com as leituras de consumo da da EDP BOX à plataforma cloud. A SIGFOX disponibiliza formas de integrar com sistemas aplicacionais - foram utilizadas as *custom callbacks*. O SIGFOX permite recuperar as mensagens enviadas a partir dos dispositivos através de *callbacks*. É possível configurar *callbacks* para que em eventos específicos, as mensagens sejam enviadas para um nosso serviço/aplicação/servidor. Por exemplo, o dispositivo pode enviar uma mensagem SIGFOX, a partir de extimulo especifico; Poderá ser notioficado quando esse evento ocorreu. A SIGFOX permite pre-configurar a retransmissão das mensagens para os principais fornecedores cloud, entre os quais Microsoft Azure.
 
@@ -306,11 +302,11 @@ HostName=xxx.azure-devices.net;SharedAccessKeyName=xxxx;SharedAccessKey=xxxxxxxx
 
 Desta forma conseguimos integrar os dispositivo através de comunicação SIGFOX com a plataforma de *backend* cloud base utilizando o Windows Azure. O seviço de Azure que utilizamos para receber todas as mensagens é o IoT Hub que descrecemos em seguida:
 
-#### IoT hub ####
+#### IoT Hub ####
 
 A implementação do cloud backend tem como peça principal o Azure IoT Hub, um serviço cloud que permite o *upload* de dados de forma segura e capacitado de receber elevados volumes de dados.  Na implementação do *backend* da EDP, seria interessante garantir que os dados pudessem ser persistidos e processados com multiplos propósitos. 
 
-Neste caso em particular, apesar de estar a utilizar um dispositivo baseado em Arduino (Akeru), não foi necessário recorrer a um dos [*Azure IOT SDK*](https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-devguide-sdks) disponiveis para comunicar com o IoT Hub. Esta comunicação é garantida através das *custom callbacks* da plataforma SIGFOX. 
+Neste caso em particular, apesar de estar a utilizar um dispositivo baseado em Arduino (Akeru), não foi necessário recorrer a um dos [*Azure IoT SDK*](https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-devguide-sdks) disponiveis para comunicar com o IoT Hub. Esta comunicação é garantida através das *custom callbacks* da plataforma SIGFOX. 
 
 Um dos pontos analisados, foi a possibilidade de tratar os dados de input de IoT Hub. O cenário foi idealizado, tendo em conta a necessidade de compressão das mensagens. Actualmente o IoT Hub não fornece capacidade de processar as mensagens chegadas, ou seja descomprimir mensagens. No entanto foi um cenário que chegou à equipa de produto e será analisada.
 
@@ -341,7 +337,7 @@ Para mais informação consultar um excelente tutorial disponivel no artigo [*A 
 
 O objetivo seria simular a detecção de anomalias no consumo energético, recolhido a partir da EDP Box. Depois de configuração do Stream Analytics, serão enviadas mensagens acima de um determinado valor. Este fluxo de dados é iniciado apenas para mensagens que indiquem valores acima do predefinido. As mensagens são enviadas para [*Service Bus Topics*](https://docs.microsoft.com/en-us/azure/service-bus-messaging/service-bus-queues-topics-subscriptions) permitindo a comunicação de um para muitos seguindo um padrão de *publish/subscribe*. Visto que num cenário real, seriam envolvidos multiplos utilizadores, a utilização de *Topics* seria a mais adequada. Cada mensagem publicada é disponibilizada para cada assinatura registrada com o tópico. As mensagens são enviadas para um tópico e são entregues a uma ou mais assinaturas associadas. As mensagens não são recebidas diretamente do tópico. Em vez disso, eles são recebidos nas assinaturas. Uma assinatura de tópico é semelhante a uma fila virtual que recebe cópias das mensagens que são enviadas para o tópico. As mensagens são recebidas de uma assinatura de forma idêntica à forma como são recebidas de uma fila. 
 
-Neste cenário, foi criada um tópico chamado enery tal como é demonstrado na figura seguinte.
+Neste cenário, foi criada um tópico chamado *energy* tal como é demonstrado na figura seguinte.
 
 ![Configuração da Service Bus]({{ site.baseurl }}/images/edp/edp29.png)
 
@@ -365,9 +361,9 @@ Estando em fase de preparação do Hackathon, a segurança não foi tema abordad
 
 Decidiu-se que a Segurança seria uma dos áreas de avaliação dos participantes. A EDP pretende verem exploradas várias técnicas para prevenir utilizações incorrectas da tecnologia. Durante o hackathon, foram também discutidas algumas medidas a poderem ser implementadas pela EDP:
 
-- Aplicação da EDP IoT Box, protegida por selo de instalação à semelhança da EDP Box;
-- Controlo dos identificadores de SIGFOX, pela EDP e associação a contas de cliente;
-- Comunicação entre EDP IoT Box e Azure, garantida por código. Instalação em cliente, não necessitaria customização e/ou configuração;
+- Aplicação da EDP IoT Box, protegida por selo de instalação à semelhança da EDP Box.
+- Controlo dos identificadores de SIGFOX, pela EDP e associação a contas de cliente.
+- Comunicação entre EDP IoT Box e Azure, garantida por código. Instalação em cliente, não necessitaria customização e/ou configuração.
 - Herança de modelo de segurança de tecnologias inerentes: SIGFOX e Microsoft Azure.
 
 ## Conclusões ##
@@ -405,9 +401,28 @@ Este foi um projeto totalmente orientado a oportunidades futuras. Este modelo de
 - Descobrir, através do Hackathon, novas formas de recolha de leituras energéticas com base no contador inteligente da EDP. É um objectivo claro desafiar as startups a investir nas compoentens de hardware e software *cloud-based*. 
 - Promover a colaboração da EDP com startups na área de IoT. Melhorar o serviço da EDP junto dos consumidores. Permitir um consumo energético mais aproriado às necessidades de cada habitação e familias. Sendo a EDP o maior fornecedor energético em Portugal o impacto tem potencial para transformar o país. 
 
+![Labelec & Hackfest team]({{ site.baseurl }}/images/edp/edp19.jpg)
+
+
 ## Resultados do EDP IoT Hackathon ##
 
-Para finalizar este testemunho, fará todo o sentido acrescentar os principais resultados do [*EDP IoT Hackathon*](http://edpiothackathon.edp.pt/). Este evento irá decorrer entre os dias **8 Fevereiro** e **24 Fevereiro, 2017**, pelo que será feito um update deste artigo.
+O **[EDP IoT Hackathon](http://edpiothackathon.edp.pt/)** decorreu entre os dias 8 de fevereiro e 24 de fevereiro de 2017. As equipas dedicaram 15 dias para trabalhar remotamente. A EDP disponibilizou várias EDP Boxes (EB) para serem utilizadas durante o desenvolvimento e testes. A avaliação final foi feita em vários vetores, incluindo pitch, produto, qualidade técnica de hardware e software.
+As 8 equipas finais tiveram a oportunidade de fazer o seu pitch e apresentar seus projetos no evento de encerramento. Foram atribuídos, aos melhores projectos, prémios e uma possível incubação na EDP Starter. Apresentamos em seguida os primeiros classificados:
 
-![Labelec & Hackfest team]({{ site.baseurl }}/images/edp/edp19.jpg)
+1º : Crowd2Data - **Joana Albuquerque**, **Nuno Santos**, **Rafael Evaristo**
+
+O seu objectivo foi criar dois equipamentos: um primeiro que fica junto do contador EDP, lê consumos e envia os valores destas leituras via Sigfox. Adicionalmente este equipamento permite também a leitura via bluetooth através de uma app para exclusiva para pessoal técnico EDP. Já o segundo equipamento, instalado dentro da casa do cliente EDP, recolhe dados de temperatura humidade e presença e relaciona-os com os consumos de energia da habitação. Quiseram, através deste equipamento, dentro da casa do cliente EDP, criar uma base tecnologia aberta à inovação permitindo a integração com outros dispositivos que implementem o seu protocolo aberto de comunicação e integração. O objectivo foi criar uma plataforma para que outras marcas possam construir as suas soluções aproveitando este hub técnico. O trabalho passou por construir o código para que a placa Akero pudesse ler o contador EDP e enviar os dados sobre consumo para Azure usando Sigfox. Para isto utilizaram o event hub, integrado com um endpoint REST chamado por uma função de Azure. Criaram uma app de Android e um interface web utilizando uma Azure Web App e uma base de dados SQL em Azure. Pretenderam indexar os custos de serviço à utilização, sem ter de pagar custos fixos de infraestrutura e pagando apenas por recursos utilizados.
+
+2º iThings/NESTO - **Marcelo Lopes**, **Michaël Memeteau**
+
+Focados na satisfação dos clientes EDP com uma proposta de alto valor agregado. O hardware empregou arquitetura ARM® (32bits Cortex®-M0+) e chip exclusivo para criptografia. O reduzido payload Sigfox não foi obstáculo para a coleta de dados em intervalos de 1'30". Além de ferramentas open souce como InfluxDB, Grafana, e Linux, poderosos recursos do Microsoft Azure (IoT Hub, Stream Analytics, Functions, Web Apps, SQL, Virtual Machines, Bing Maps, e Power BI) foram utilizados para dar vida ao projeto. O resultado final permite ao Cliente EDP acompanhar seu consumo detalhado e receber notificações por SMS ou push sobre equipamentos deixados ligados. Por sua vez, a EDP pode identificar de forma automática faltas de energia e anormalidades. A equipa planeja evoluir o projeto utilizando o Azure ML para realizar Non-Intrusive Load Monitoring (NILM).
+
+![iThings/NESTO]({{ site.baseurl }}/images/edp/edp34.png)
+ 
+
+3º Innowave/Thought Creator: **João Amaro**, **José Araujo**, **Pedro Moscoso**, **Rafael Pires**
+
+O sistema utilizou o Azure PaaS para lidar com a recepção e gestão de mensagens Sigfox provenientes da EDP Box. Estas mensagens continham todas as informações necessárias para criar um painel de controle em tempo real que fornece informações para o cliente final da EDP, tal como, indicadores técnicos de consumo energético. Paralelamente, foi desenvolvido um motor de gamificação para dar "Pontos de Energia" aos clientes que gerem os seus padrões de consumo de energia através da aplicação. Esses pontos poderiam ser posteriormente trocados na rede de parceiros da EDP.
+
+
 
