--- a/_posts/2016-09-26-en-EDP.md
+++ b/_posts/2016-09-26-en-EDP.md
@@ -1,6 +1,5 @@
 ---
 layout: post
-published:  false
 title:  "EDP and Microsoft prepare for a public hackathon to create a smart meter for home energy monitoring"
 author: "João Almeida"
 author-link: "http://github.com/joalmeid"
@@ -13,18 +12,16 @@ excerpt: EDP, a leading energy producer in Portugal, wants to challenge startups
 language: English
 verticals: [Energy, Smart Cities]
 ---
-    
 
+*This report was updated on March 5, 2017, to include the results of the EDP hackathon.*
 
-We live in an age of innovation in the energy sector. Renewable power has been growing significantly over the last decade and **EDP**, the leading supplier of electricity in Portugal, has been a leader of this clean energy revolution. The integration of IT and communication technologies with the secular distribution grid has been key to allowing the growth of renewable power and to maximizing the potential for energy efficiency. 
-
-In recent years, EDP has developed a product called Redy that helps customers monitor and manage their home energy consumption. This is a high-end product in the home automation class, available only to EDP customers. It is a powerful product, but it is not easy to install and turns out to be a costly service. EDP is looking for more affordable solutions based on a product that is easier to install in the customer's house. Ideally, this new version of the product could be installed by the customer without the need of a technician. 
+We live in an age of innovation in the energy sector. Renewable energy has been growing significantly over the last decade and **EDP**, the leading producer, distributor, and supplier of electricity in Portugal, has been an early promoter of the clean energy revolution. The integration of IT and communication technologies with the secular distribution grid, resulting in the complex infrastructure commonly known as *smart grid*, has been key to allowing the growth of renewable energy and to maximizing the potential for energy efficiency. 
 
 ## The challenge ##
 
-EDP **has decided to challenge startups** to find an inexpensive end-user solution that is easy to install and use. This solution should enable an end customer to collect data on energy consumption and explore ways of using the information. It aims to explore new business models that can include open-source approaches to commercial products. Integration with the home automation industry is also included.
+EDP has **decided to challenge startups** to find an inexpensive end-user solution for home energy monitoring that is easy to install and use. This solution should enable the customer to collect data on energy consumption and explore ways of using the information. It aims to explore new business models that can include open-source approaches to commercial products, exploring possible integration with the home automation industry.
 
-EDP decided the best approach to such a challenge would be through a hackathon, and its team worked with Microsoft to prepare for the event.
+EDP decided the best approach to address the challenge would be through a hackathon, working closely with Microsoft to prepare for the event.
 
 ## Customer profile ##
 
@@ -33,7 +30,7 @@ EDP decided the best approach to such a challenge would be through a hackathon, 
 
 [EDP – Energias de Portugal, S.A.](http://www.edp.pt/en/Pages/homepage.aspx) is the largest generator, distributor, and supplier of electricity in Portugal, with significant operations in electricity and gas in Spain as well. EDP is the third-largest electricity-generating company and one of the largest gas distributors on the Iberian Peninsula.
  
-EDP has a relevant presence in the energy world, operating in 14 countries, with more than 10 million electricity customers, 1.4 million gas supply points, and more than 12,000 employees worldwide. On December 31, 2015, EDP had an installed capacity of 24.4GW, generating 63.7TWh, of which 72% comes from wind and hydro plants.  
+EDP has a relevant presence in the energy world, operating in 14 countries, with more than 10 million electricity customers, 1.4 million gas supply points, and more than 12,000 employees worldwide. On December 31, 2015, EDP had an installed capacity of 24.4 GW, generating 63.7 TWh, of which 72% comes from wind and hydro plants.  
 
 EDP is a strong believer in open innovation. It works with universities, scientific institutions, startups, value chain suppliers, and many other innovation sources. EDP partners with entrepreneurs, large corporate *business angels*, venture capital funds, and other investors. It makes available a set of tools that include funding, management support, and a business-oriented test base with an international footprint. EDP is committed to be at the forefront of energy innovation.
 
@@ -61,11 +58,11 @@ Narrow Net holds the exclusive rights to deploy SIGFOX technology (patented) in 
 
 Despite its relatively recent startup history, 40 scaleups (startups with more than $1 million in funding raised since their founding and at least one funding round in the last 5 years) have been identified in Portugal. They have cumulatively raised over $166 million from venture capital since inception, with an average of $4.2 million each. At least 24 other companies have secured funding in the range of $0.5-$1 million.
 
-Today the Portuguese startup scene is in a very different position from where it was a few years ago. Startups, entrepreneurs, and the various players have became more mature. Now, startups such as Uniplaces, Feedzai, Unbabel, Talkdesk, Veniam, and Seedrs are leading the way. Entrepreneurs such as Miguel Amaro, Cristina Fonseca, Nuno Sebastião, João Barros, Vasco Pedro, and Carlos Silva are showing how it’s done and are inspiring a new breed of entrepreneurs to build companies with an international mindset. And today, international VC firms such as Index Ventures, Balderton, and Accel Partners are looking at Portugal as a place where great startups can be found.
+Today the Portuguese startup scene is in a very different position from where it was a few years ago. Startups, entrepreneurs, and the various players have become more mature. Now, startups such as Uniplaces, Feedzai, Unbabel, Talkdesk, Veniam, and Seedrs are leading the way. Entrepreneurs such as Miguel Amaro, Cristina Fonseca, Nuno Sebastião, João Barros, Vasco Pedro, and Carlos Silva are showing how it’s done and are inspiring a new breed of entrepreneurs to build companies with an international mindset. And today, international VC firms such as Index Ventures, Balderton, and Accel Partners are looking at Portugal as a place where great startups can be found.
 
 Portugal is rising from the late-2000s financial crisis and rapidly emerging on the European startup map, with a very vibrant entrepreneurial community able to produce tangible results, despite its relatively young history. Although it can’t yet be compared with leading countries like UK, Germany, and France, Portugal does share many of the same similarities—and a smaller gap—with Spain and, particularly, Italy.
 
-## House automation and smart meters ##
+## Home automation and smart meters ##
 
 Smart metering systems measure electricity consumption and are implemented to replace manual methods of gathering information about energy use. By allowing a look at real-time consumption, smart meters are a useful tool to understand where energy use can be cut and where cost-effective measures need to be implemented. Likewise, they can communicate with home automation systems to help control energy use, particularly at times when costs are at their highest.
 
@@ -77,13 +74,13 @@ We soon realized the main challenge would be the hardware development allowing t
 
 Deliverables:
 
-1. SIGFOX Compression Algorithm – to compress data from 16b to less than 12b.
-2. SIGFOX Callback, IoT Hub, Azure Stream Analytics, Power BI, Logic Apps, Notification Hub Setup – to process SIGFOX messages through to visualization and notifications.
-3. EDP IoT Box - Custom Arduino Shield, Custom 3D Printed Enclosure.
-4. edpComm Library – C++ library for communicating with the EDP IoT Box.
-5. Azure ramp-up material – Docs, walkthroughs, and code samples.
-6. Arduino ramp-up material – Docs, walkthroughs, and code samples.
-7. EDP Hackathon website - Visit it at [*http://edpiothackathon.edp.pt*](http://edpiothackathon.edp.pt). 
+- SIGFOX Compression Algorithm – to compress data from 16B to less than 12B.
+- SIGFOX Callback, IoT Hub, Azure Stream Analytics, Power BI, Logic Apps, Notification Hub Setup – to process SIGFOX messages through to visualization and notifications.
+- EDP IoT Box – custom Arduino Shield, Custom 3D Printed Enclosure.
+- edpComm Library – C++ library for communicating with the EDP IoT Box.
+- Azure ramp-up material – docs, walkthroughs, and code samples.
+- Arduino ramp-up material – docs, walkthroughs, and code samples.
+- EDP Hackathon website – visit it at [*http://edpiothackathon.edp.pt*](http://edpiothackathon.edp.pt). 
 
 The team:
 
@@ -93,6 +90,7 @@ The team:
 - Francisco Maria Santos – Software Developer, EDP  
 - Diogo Ribeiro – Electrical Engineer, EDP
 - João Sabido – Entrepreneurship & Business Incubation, EDP Starter
+- António Baptista – Entrepreneurship & Business Incubation, EDP Starter
 
 ![Team's White-board and Francisco Santos]({{ site.baseurl }}/images/edp/edp18.jpg)
 
@@ -161,7 +159,7 @@ Several components were used:
 
 #### The Akeru board ####
 
-The Akeru board is indeed an Arduino, and we may even use the [*Arduino*](https://www.arduino.cc) development tools.
+The Akeru board is indeed an Arduino Uno, and we may even use the [*Arduino*](https://www.arduino.cc) development tools.
 
 The development in Akeru is also done with the Arduino language, which is merely a set of C/C++ functions that can be called from your code. We can create sketches that undergo minor changes (for example, automatic generation of function prototypes) and then is passed directly to a C/C++ compiler (avr-g++).
 
@@ -179,9 +177,9 @@ The main challenge was the data compression algorithm to apply in SIGFOX communi
 
 **Notes:**
 
-1. Assuming implementation until the year 2099. Only allowing year with two chars (1 byte).
-2. Offset should be considered as a Day offset as in the number of 15-minute intervals after 0:00.
-3. A total of 96 intervals is expected.
+- Assuming implementation until the year 2099. Only allowing year with two chars (1 byte).
+- Offset should be considered as a Day offset as in the number of 15-minute intervals after 0:00.
+- A total of 96 intervals is expected.
 
 With this algorithm it was possible to construct a message with a total length inferior to 12 bytes—the limit for SIGFOX.
 
@@ -245,9 +243,9 @@ The implementation followed the concepts described in the [*Azure IoT Reference 
 
 #### SIGFOX ####
 
-[*SIGFOX*](www.sigfox.com) is a French company that builds wireless networks to connect low-energy objects such as electricity meters, smartwatches, and washing machines, which need to be continuously on and emitting small amounts of data. SIGFOX was founded in 2009, providing global cellular connectivity for the Internet of Things. Its infrastructure is independent of existing networks, such as telecommunications networks.
+[*SIGFOX*](www.sigfox.com) is a French company that builds wireless networks to connect low-energy objects such as electricity meters, smart watches, and washing machines, which need to be continuously on and emitting small amounts of data. SIGFOX was founded in 2009, providing global cellular connectivity for the Internet of Things. Its infrastructure is independent of existing networks, such as telecommunications networks.
 
-SIGFOX deploys Low-Power Wide Area Networks (LPWAN) that work in concert with hardware that manufacturers can integrate into their products. In terms of compatibility, the network takes a similar approach to traditional GSM networks. Any device with integrated SIGFOX hardware can connect to the Internet—in regions where a SIGFOX network has been deployed—without any external hardware, like a Wi-Fi or Zigbee router. But, in another sense, the SIGFOX network is entirely different than traditional GSM networks, in that it can only transmit small amounts of data.
+SIGFOX deploys Low-Power Wide Area Networks (LPWAN) that work in concert with hardware that manufacturers can integrate into their products. In terms of compatibility, the network takes a similar approach to traditional GSM networks. Any device with integrated SIGFOX hardware can connect to the Internet—in regions where a SIGFOX network has been deployed—without any external hardware, like a Wi-Fi or ZigBee router. But, in another sense, the SIGFOX network is entirely different than traditional GSM networks, in that it can only transmit small amounts of data.
 
 The main factors that led to the choice of SIGFOX are its low energy consumption and the reliability of communication. Here is a summary of the technology:
 
@@ -256,7 +254,7 @@ The main factors that led to the choice of SIGFOX are its low energy consumption
 | Purpose | Specially conceived for M2M/IoT.|
 | Identity | Each device has a unique ID (NOT an IP); |
 | Ultra Narrow Band | - Energy-efficient; - Resistant to jamming; |
-| Spectrum | ISM free-to-use (ETSI 300-220); Forces 1% duty cycle; Base stations MUST comply as well;
+| Spectrum | ISM free-to-use (ETSI 300-220); Forces 1% duty cycle; Base stations MUST comply as well; |
 | Frequency | 828 MHz (Europe); 902 MHz (USA); |
 | Long Range & Protocols | 2-way communication with 162 dB path loss; |
 | Customer Payload | 12 byte messages with a MAXIMUM of 140 message per day in Europe (ETSI 300-220).|
@@ -274,7 +272,7 @@ With the SIGFOX device registered and capable of sending messages, it was possib
 year::uint:16:little-endian month::uint:16:little-endian day::uint:16:little-endian offset::uint:16:little-endian amr::uint:16:little-endian payload::uint:16:little-endian
 ```
 
-- Connection string. The Azure IoT Hub access configuration (see below). In idio it is possible to evaluate the structure of * connection string * that identifies which instance of IoT Hub and also provides the respective security configurations.
+- Connection string. The Azure IoT Hub access configuration (see below). In idio it is possible to evaluate the structure of *connection string* that identifies which instance of IoT Hub and also provides the respective security configurations.
 
 ```
 HostName=xxx.azure-devices.net;SharedAccessKeyName=xxxx;SharedAccessKey=xxxxxxxxxxxxxxxxxxxxxxxxxx
@@ -301,7 +299,7 @@ In this way we were able to integrate the devices through SIGFOX communication w
 
 #### IoT Hub ####
 
-The key to cloud back-end implementation is Azure IoT Hub, a cloud service that allows uploading high volumes of data in a secure and reliable way. This process is usually described as *data ingestion*. In the case of EDP the cloud back end had the requirements of persisting data and being able to do a multipurpose processing.
+The key to cloud back-end implementation is Azure IoT Hub, a cloud service that allows uploading high volumes of data in a secure and reliable way. This process is usually described as *data ingestion*. In the case of EDP, the cloud back end had the requirements of persisting data and being able to do a multipurpose processing.
 
 In particular, although using an Arduino-based device (Akeru), it was not necessary to resort to one of the [*Azure IoT SDKs*](https://docs.microsoft.com/en-us/azure/Iot-hub/iot-hub-devguide-sdks) available to communicate with IoT Hub. This communication is guaranteed by SIGFOX through its *custom callbacks* and Azure bridge.
 
@@ -338,12 +336,12 @@ In this scenario, a topic called **energy** was created as shown in the followin
 ![Service Bus Configuration]({{ site.baseurl }}/images/edp/edp29.png)
 
 
-The consumer of the messages in this topic have been ensured by the [*Logic Apps service*](https://docs.microsoft.com/en-us/azure/app-service-logic/app-service-logic-what-are-logic-apps). This service provides a simple way to implement integrations in a scalable way. It provides a visual designer to model and automate any process as a series of steps known as a workflow. A set of connectors is made available to help integration with other services and protocols. In the anomaly detection scenario, the **Logic App** is responsible for detecting messages in the Service Bus Topic and forwards it to a **Notification Hub**.   
+The consumer of the messages in this topic has been ensured by the [*Logic Apps service*](https://docs.microsoft.com/en-us/azure/app-service-logic/app-service-logic-what-are-logic-apps). This service provides a simple way to implement integrations in a scalable way. It provides a visual designer to model and automate any process as a series of steps known as a workflow. A set of connectors is made available to help integration with other services and protocols. In the anomaly detection scenario, the **Logic App** is responsible for detecting messages in the Service Bus Topic and forwards it to a **Notification Hub**.   
 
 ![Logic App Configuration]({{ site.baseurl }}/images/edp/edp28.png)
 
 
-The end goal would be to notify users via a mobile application. This service provides a multiplatform, scaled-out push infrastructure that enables sending mobile push notifications. Using the [*Notification Hub*](https://docs.microsoft.com/en-us/azure/notification-hubs/notification-hubs-push-notification-overview) ensured notifications were delivered to all platforms: Windows, iOS, or Android. The biggest advantage of the Notification Hubs service is allowing the abstraction of details from the different *platform notification systems* (PNS) with a single API and with flexibility in recipients (one or millions of users).
+The end goal would be to notify users via a mobile application. This service provides a multiplatform, scaled-out push infrastructure that enables sending mobile push notifications. Using [*Notification Hubs*](https://docs.microsoft.com/en-us/azure/notification-hubs/notification-hubs-push-notification-overview) ensured notifications were delivered to all platforms: Windows, iOS, or Android. The biggest advantage of the Notification Hubs service is allowing the abstraction of details from the different *platform notification systems* (PNS) with a single API and with flexibility in recipients (one or millions of users).
 
 ![Notification Hub Configuration]({{ site.baseurl }}/images/edp/edp30.png)
 
@@ -376,7 +374,7 @@ Energy consumption, range, and volume of data are particularly important in the 
 | LOW DATA RATE | Less than 5,000 bits per second. Often only 20-256 bytes per message are sent several times a day. |
 | LOW POWER CONSUMPTION | This makes very long battery life possible, often between 5 and 10 years. |
 
-For EDP this initiative is transformative since it bets on a totally different execution model. With a focus on promoting initiatives related to IoT, EDP is keen on getting closer to the European startup ecosystem. This way they can innovate, discover talent, improve networking and renew their business processes.
+For EDP this initiative is transformative since it bets on a totally different execution model. With a focus on promoting initiatives related to IoT, EDP is keen on getting closer to the European startup ecosystem. This way they can innovate, discover talent, improve networking, and renew their business processes.
 
 In this case, the focus of these efforts closely connected to EDP's core business—energy and residential space.
 
@@ -395,9 +393,28 @@ This project was totally oriented to future opportunities. This model of prepari
 - Discover, through a hackathon, new ways of collecting energy readings from an EDP Box—a Smart Home Meter. It is a clear goal to challenge startups in the cloud-based software and hardware components.
 - Promote EDP's collaboration with startups in the IoT area. Improve EDP's service to consumers. Allow an energy consumption suited to the needs of each family. As EDP is the largest energy supplier in Portugal, the impact can potentially transform the country.
 
+![Labelec & Hackfest team]({{ site.baseurl }}/images/edp/edp19.jpg)
+
+
 ## EDP results from the IoT hackathon ##
 
-To wrap up this article, it makes sense to include the takeaways from the [*EDP IoT Hackathon*](http://edpiothackathon.edp.pt/). This event will take place between **February 8** and **February 24, 2017**, so an update will soon follow.
+The **[EDP IoT Hackathon](http://edpiothackathon.edp.pt/)** took place between **February 8** and **February 24, 2017**. Teams were given 15 days to work remotely. EDP made several EDP Boxes available to be used on development and testing. Final evaluation was done through several vectors including pitch, product design, hardware technical strength, and software technical strength. 
 
-![Labelec & Hackfest team]({{ site.baseurl }}/images/edp/edp19.jpg)
+The eight final teams had the opportunity to pitch and present their projects in the closing event. The best projects were awarded with prizes and possible incubation within EDP Starter. Here are the projects: 
+
+**1<sup>st</sup>, Crowd2Data** - **Joana Albuquerque**, **Nuno Santos**, **Rafael Evaristo**
+
+Their objective was to create two devices: a first one that is next to the EDP smart meter, collects energy consumption readings and sends the values via SIGFOX. Additionally, this equipment also allows the reading via Bluetooth through an app exclusive to EDP technical personnel. The second device, installed inside the house of the EDP customer, collects temperature data of humidity and presence and relates them to the energy consumption of the house. Their plan was to create a technological open foundation to be installed within residential houses, promoting innovation and allowing integration with other devices that implement this open protocol of communication and integration. As an end goal, other devices/brands could build their solutions using this technological hub. The work went on to construct the code so that the Akeru board could read from the EDP smart meter and send the consumption data to Azure using SIGFOX. For this they used the event hub, integrated with a REST endpoint called by an Azure function. They created an Android app and a web interface using the Web Apps feature of Azure App Service with an Azure SQL database. This way they could index service costs to energy usage, without having to pay infrastructure fixed costs. They fostered a true pay-as-you-go model into an energy consumption model.
+
+**2<sup>nd</sup>, iThings/NESTO** - **Marcelo Lopes**, **Michaël Memeteau**
+
+Focused on EDP’s customer satisfaction with a solution bringing high added value. The hardware used ARM® architecture (32 bits Cortex®-M0 +) and unique chip for encryption. In addition to open source tools such as InfluxDB, Grafana, and Linux, powerful Azure services (IoT Hub, Stream Analytics, Azure Functions, Web Apps, SQL, Virtual Machines, Bing Maps and Power BI) were used to bring the project to life. The final result allows EDP’s customers to track their detailed consumption and get notifications (SMS/push) for devices left turned on at home. The team plans to evolve the project using Azure Machine Learning to perform non-intrusive load monitoring (NILM).
+
+![iThings/NESTO]({{ site.baseurl }}/images/edp/edp34.png)
+
+**3<sup>rd</sup>, Innowave/Thought Creator** - **João Amaro**, **José Araujo**, **Pedro Moscoso**, **Rafael Pires**
+
+The system used the Azure platform as a service (PaaS) to handle the reception and management of SIGFOX messages from the smart meter. Those messages contained all the information needed to create a real-time dashboard that provides not only information to the EDP client but also technical energy indicators. On top of that, a gamification engine was created to give “energy points” to the clients who manage their energy consumption patterns through the application. Those points could later be exchanged in the EDP partners network.
+
+
 
