Complete Problem Statement
For the Powel CaaP Case

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -22,6 +22,7 @@ technologies:
     - Bing Spell Check
 - Xamarin
 - Text-to-speech
+- DocumentDb
 - GitHub
 - etc
 
@@ -36,7 +37,7 @@ ambition for  the hackfest scoped.
 ## Conversation as a Platform
 During the hackfest, we implemented the following:
 - Xamarin app 
-- Tranlation
+- Translation
 - etc
 
 ## Hackfest members
@@ -60,8 +61,22 @@ Denmark, Switzerland, Chile, Turkey and Poland.
 
 
 ## Problem statement
+Powel envisions a future where on-site engineers can use their natural voice as the main driver for computer-assisted support during inspection of power facilities. 
+An inspection of an electrical station, or line inspections using **Andre**, will free up the engineers hands, which gives a more fluent process than having to fill out a paper form,
+or plot data into a device application.
+Utilizing the capabilities of a wearable device, such as a mobile phone, the application will automatically understand which facility is being inspected by 
+obtaining the users GPS location, and provide the necessary checkpoint lists and dialogs appropriate to that facility.
+
+The hackfest focused on two distinct inspection targets: 
+- Power Station inspection
+- Power Line inspection
+
+The goal was to be able to design two distinctly different conversation dialogs with enough functionality to be 
+tested out in the field. Based on these dialogs, Powel would then have amassed enough experience with conversation as a Platform 
+to enrich **Andre** as well as devise similar conversational applications for other areas.
 
 ## Architecture
+
 
 ### Thing 1
 details details details
