Add Powel Logo Image

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -73,7 +73,7 @@ The hackfest focused on two distinct inspection targets:
 
 The goal was to be able to design two distinctly different conversation dialogs with enough functionality to be 
 tested out in the field. Based on these dialogs, Powel would then have amassed enough experience with conversation as a Platform 
-to enrich **Andre** as well as devise similar conversational applications for other areas.
+to enrich **Andre** as well as devise similar conversational applications for use in other areas.
 
 ## Architecture
 
