--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -11,6 +11,7 @@ excerpt: During a hackfest with Microsoft, Powel implemented an  solution to hel
 language: English
 verticals: [Smart Cities, Environmental, Power]
 ---
+![Powel Logo](../images/Powel/CaaP/powel_logo_regular.png)
 
 In this CaaP hackfest, Microsoft teamed up with Powel to hack a brand-new solution **Andre**. We describe the process and results here, including the following 
 technologies:
