Add temporary title to the project

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -13,6 +13,7 @@ verticals: [Smart Cities, Environmental, Power]
 ---
 ![Powel Logo](../images/Powel/CaaP/powel_logo_regular.png)
 
+## Meet **Andre** the elecrical Engineer assistant
 In this CaaP hackfest, Microsoft teamed up with Powel to hack a brand-new solution **Andre**. We describe the process and results here, including the following 
 technologies:
 
