Add Links to all referenced technologies

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -17,15 +17,16 @@ verticals: [Smart Cities, Environmental, Power]
 In this CaaP hackfest, Microsoft teamed up with Powel to hack a brand-new solution **Andre**. We describe the process and results here, including the following 
 technologies:
 
--  Microsoft Bot Framework
--  Microsoft Cognitive Services
-    - Language Understanding Intelligent Services (LUIS)
-    - Translation API
-    - Bing Spell Check
-- Xamarin
+-  [Microsoft Bot Framework](https://dev.botframework.com/)
+-  [Microsoft Cognitive Services](https://www.microsoft.com/cognitive-services)
+    - [Language Understanding Intelligent Services (LUIS)](https://www.luis.ai/)
+    - [Translation API](https://www.microsoft.com/cognitive-services/en-us/translator-api)
+    - [Bing Spell Check API](https://www.microsoft.com/cognitive-services/en-us/bing-spell-check-api)
+- [Xamarin](https://www.xamarin.com/)
 - Text-to-speech
-- DocumentDb
-- GitHub
+    - [Bing Speech API](https://www.microsoft.com/cognitive-services/en-us/speech-api)
+- [DocumentDb](https://azure.microsoft.com/en-us/services/documentdb/)
+- [GitHub](https://github.com/)
 - etc
 
 Additionally, the team expressed a need for getting more hands-on experience with
