--- a/_posts/2017-01-17-plasmd.md
+++ b/_posts/2017-01-17-plasmd.md
@@ -202,7 +202,7 @@ After the initial patient trials, Plas.md plans to add more simulated levels (ma
 
 *Azure portal showing resources*
 
-<img alt="Azure portal showing resources" src="{{ site.baseurl }}/images/Bionautica/bion-azurescreen.jpg" width="836">
+<img alt="Azure portal showing resources" src="{{ site.baseurl }}/images/Bionautica/bion-azurescreen.png" width="836">
 
 *Deploying from Visual Studio*
 
