--- a/_posts/2017-01-20-ZingHR.md
+++ b/_posts/2017-01-20-ZingHR.md
@@ -5,7 +5,7 @@ author: "Gandhali Samant"
 author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date: 2017-03-12
-categories: Power BI Embedded
+categories: [Power BI Embedded]
 color: "blue"
 #image: "{{ site.baseurl }}/images/imagename.png" #should be ~350px tall
 excerpt: ZingHR teamed up with Microsoft to bring interactive reports to their HR application by using Power BI Embedded. 
