--- a/_posts/2017-01-20-ZingHR.md
+++ b/_posts/2017-01-20-ZingHR.md
@@ -85,7 +85,7 @@ Sample response:
           "role" 		: "xxxxxx",
           "Company"		: "xxxxxx",
           "Token Time "		: "xxxxxxx",
-          "isMobile" 		: "True/False"
+          "isMobile" 		: "True/False",
           "accessToken": "8vxxxxxxxxxx",
           "id": "1exxxxxxxxxxxxxxxxxxxxxxx",
           "name": "HR Report",
