--- a/_posts/2017-01-20-ZingHR.md
+++ b/_posts/2017-01-20-ZingHR.md
@@ -101,7 +101,7 @@ The ZingHR team has hosted their OLTP database (SQL Server 2012) on Azure Virtua
 
 *Data pipeline using Data Factory*
 
-![Diagram of data pipeline using Azure Data Facgtory]({{ site.baseurl }}/images/ZingHR/ZingHR2.png)
+![Diagram of data pipeline using Azure Data Factory]({{ site.baseurl }}/images/ZingHR/ZingHR2.png)
 
 **Step 4: Embedding Reports**
 
